--- a/Acc/configs/op_target.yaml
+++ b/Acc/configs/op_target.yaml
@@ -407,6 +407,27 @@ paddle:
 
 tensor:
   -  T
+  -  __mul__
+  -  __add__
+  -  __radd__
+  -  __sub__
+  -  __rsub__
+  -  __rmul__
+  -  __div__
+  -  __truediv__
+  -  __rdiv__
+  -  __rtruediv__
+  -  __mod__
+  -  __matmul__
+  -  __gt__
+  -  __ge__
+  -  __lt__
+  -  __le__
+  -  __floordiv__
+  -  __pow__
+  -  __rpow__
+  -  __eq__
+  -  __ne__
   -  abs
   -  abs_
   -  acos
@@ -688,7 +709,6 @@ tensor:
   -  triu_
   -  trunc
   -  trunc_
-  -  type
   -  unbind
   -  unflatten
   -  unfold
