replace torch with paddle

--- a/Acc/compare/api_precision_threshold.yaml
+++ b/Acc/compare/api_precision_threshold.yaml
@@ -1,390 +1,390 @@
 mul:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 mul_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __mul__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __imul__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __rmul__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 add:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 add_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __add__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __iadd__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __radd__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 div:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 div_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __div__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __idiv__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 divide:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 divide_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 leaky_relu:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 leaky_relu_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 prelu:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 reciprocal:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 reciprocal_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 rsqrt:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 rsqrt_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 square:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 square_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 sub:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 sub_:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 rsub:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __isub__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
 __sub__:
-  torch.float32:
+  paddle.float32:
     rtol: 0.000001
     small_value: 0.000001
     small_value_atol: 0.000001
-  torch.float16:
+  paddle.float16:
     rtol: 0.001
     small_value: 0.001
     small_value_atol: 0.001
-  torch.bfloat16:
+  paddle.bfloat16:
     rtol: 0.004
     small_value: 0.001
     small_value_atol: 0.001
