--- a/Acc/configs/tool_config.yaml
+++ b/Acc/configs/tool_config.yaml
@@ -1,13 +1,16 @@
-# path should be real path, relative path is not supported yet.
+# path should be real path, relative path is not safe.
+
+# Target APIs.
 op_target_path: "./PaddleAPEX/Acc/configs/op_target.yaml"
 dump_root_path: "./dump_info"
 
+# API to be omitted.
 white_list: None
 # white_list: "./Acc/configs/white_list.yaml"
 
 # mode must be chosen from ["real_data", "random"]
 dump_mode: "real_data"
 
-# set cards number
-global_rank: 1
+
+# target_step is a list, dump api function will turn on at the specific step
 target_step: [0]
