--- a/paddleapex/api_tracer/configs/op_target.yaml
+++ b/paddleapex/api_tracer/configs/op_target.yaml
@@ -471,7 +471,7 @@ target_op:
   -  paddle.where_
   -  paddle.zeros
   -  paddle.zeros_like
-  # -  T
+  # -  paddle.Tensor.T
   -  paddle.Tensor.__add__
   -  paddle.Tensor.__and__
   -  paddle.Tensor.__radd__
